--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
-chrono = "0.4.39"
+crc = "3.2.1"
